--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -37,7 +37,7 @@ jobs:
       run: npm run lint
       
     - name: Run tests
-      run: npm test -- --run --coverage
+      run: npm run test:coverage
       
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
@@ -68,7 +68,7 @@ jobs:
       run: npm run build
       
     - name: Build Storybook
-      run: npm run storybook:build
+      run: npm run build:storybook
       
     - name: Upload build artifacts
       uses: actions/upload-artifact@v3
@@ -98,7 +98,7 @@ jobs:
       run: npm ci
       
     - name: Build Storybook
-      run: npm run storybook:build
+      run: npm run build:storybook
       
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
@@ -127,7 +127,7 @@ jobs:
       run: npm ci
       
     - name: Build library
-      run: npm run build:prod
+      run: npm run build
       
     - name: Publish to NPM
       run: npm publish
